# darken

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  apm.yml  go.mod  pyproject.toml
.design/: harness-roster.md  pipeline-mechanics.md
.scion/: grove-id
docs/: AUDIT_LOG_SCHEMA.md  CLI.md  RELEASING.md  darken-lifecycle-refactor.md  ousterhout-review-v0.1.18.md
images/: Makefile  README.md  test-make-targets.sh  test-readme.sh
scripts/: bootstrap.sh  spawn.sh  stage-creds.sh  stage-skills.sh  test-apm-yml.sh  test-bootstrap-wrapper.sh  test-darwin.sh  test-docs-sync.sh  test-embed-drift.sh  test-end-to-end.sh  test-gitignore-staging.sh  test-no-legacy-volumes.sh  test-planner-t1.sh  test-planner-t2.sh  test-planner-t3.sh  test-planner-t4-prompt.sh  test-planner-t4-spec-kit.sh  test-planner-t4.sh  test-prelude-token-safety.sh  test-readme-auth.sh  test-ready-for-merge.sh  test-skill-shells.sh  test-skills-on-manifests.sh  test-skills-roundtrip.sh  test-sme-skills-smoke.sh  test-spawn-no-volumes.sh  test-spawn-stages.sh  test-spec-kit-prelude.sh  test-stage-creds-integration.sh  test-stage-creds.sh  test-stage-skills-canonical.sh  test-stage-skills-concurrency.sh  test-stage-skills.sh  test-subharness-stop-hook.sh  test-sync-embed-data-preserves-vendored.sh  test-vendor-skills-drift.sh
templates/: CLAUDE.md.tmpl
tests/: conftest.py  d06_test.sh  d07_test.sh  d08_test.sh  test_adversarial.py  test_answers.py  test_audit.py  test_batcher.py  test_bootstrap.py  test_classifier_decide.py  test_constitution.py  (+11 more)
(+315 files in other folders)
