[project]
name = "darkish-factory"
version = "0.1.0"
description = "Darkish Factory: Slice 1 — constitution + hybrid escalation classifier"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "anthropic>=0.40,<1.0",
    "structlog>=24,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "mypy>=1.10,<2",
    "ruff>=0.6,<1",
    "pytest-cov>=5,<7",
    "types-PyYAML>=6.0.12,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darkish_factory"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
